fix(core-input): prevent text cutoff for hanging characters

--- a/packages/Input/Input.modules.scss
+++ b/packages/Input/Input.modules.scss
@@ -11,3 +11,9 @@
   composes: absolute centerVertically from '../../shared/styles/Position.modules.scss';
   composes: iconRight from '../../shared/components/FormField/FormField.modules.scss';
 }
+
+.input {
+  min-height: 3.25rem;
+  max-height: 3.25rem;
+  height: auto;
+}
